5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1595_1014.log
== TEST (2019-04-02 12:58:47) 
-- CODE:
total=float(input("qual total de vendas?"))
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:04:24) 
-- CODE:
total=float(input("qual total de vendas?"))
lucro=total//100*30
print(lucro)
-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:04:35) 
-- CODE:
total=float(input("qual total de vendas?"))
lucro=total//100*30
print(lucro)
-- EXECUTION TIME:
0.14069
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:05:27) 
-- CODE:
total=float(input("qual total de vendas?"))
lucro=total//100*30
print(lucro)
-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:08:02) 
-- CODE:
total=float(input("qual total de vendas?"))
print(round(total//100*30, 2)
-- ERROR:
File "XXXX", line 3
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:08:06) 
-- CODE:
total=float(input("qual total de vendas?"))
print(round(total//100*30, 2))
-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:08:12) 
-- CODE:
total=float(input("qual total de vendas?"))
print(round(total//100*30, 2))
-- EXECUTION TIME:
0.133301
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:08:36) 
-- CODE:
total=float(input("qual total de vendas?"))
print(round(total/100*30, 2))
-- EXECUTION TIME:
0.142421
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
